# kak-tree-sitter

./: .build.yml  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  build.rs  config.toml  default-config.toml  flake.nix  gen-config.nix  gen-grammars.nix
.builds/: kak-tree-sitter.yml  ktsctl.yml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml  upload-kak-tree-sitter.yaml  upload-ktsctl.yaml
doc/: design.md  faces.md
docs/: README.md
docs/completions/: kak-tree-sitter.nu
docs/design/: request.md  sessions.md  v0.0.1.md
docs/man/: Grammar-workflow-updates.md  JSX.md  README.md  commands.md  completions.md  configuration.md  faq.md  features.md  getting-started.md  highlighting.md  how-to-install.md  ktsctl.md  text-objects.md  tweaking.md  usage.md
kak-tree-sitter/: CHANGELOG.md  Cargo.toml  build.rs
kak-tree-sitter-config/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  default-config.toml
kak-tree-sitter-config/src/: error.rs  lib.rs  source.rs
kak-tree-sitter/rc/: kak-tree-sitter.kak  static.kak  text-objects.kak
kak-tree-sitter/src/: cli.rs  client.rs  config.rs  daemon.rs  error.rs  fifo.rs  grammars.rs  handler.rs  highlighting.rs  kak.rs  kakoune.rs  languages.rs  logging.rs  main.rs  nav.rs  protocol.rs  queries.rs  rc.rs  request.rs  response.rs  selection.rs  server.rs  session.rs  text_objects.rs  tree_sitter.rs  tree_sitter_state.rs
kak-tree-sitter/src/kakoune/: buffer.rs  rc.rs  selection.rs  session.rs  text_objects.rs
kak-tree-sitter/src/protocol/: request.rs  response.rs
kak-tree-sitter/src/server/: buffer_watch.rs  event_loop.rs  fifo.rs  handler.rs  request.rs  resources.rs  response.rs  tmpfs.rs  tokens.rs
kak-tree-sitter/src/tree_sitter/: indent_guidelines.rs  languages.rs  state.rs
ktsctl/: CHANGELOG.md  Cargo.toml  README.md  build.rs
ktsctl/src/: cli.rs  commands.rs  error.rs  git.rs  main.rs  process.rs  report.rs  resources.rs  ui.rs
ktsctl/src/commands/: manage.rs  query.rs  remove.rs
ktsctl/src/ui/: report.rs  section.rs  source.rs  status_icon.rs  table.rs
rc/: kak-tree-sitter.kak
runtime/: README.md
runtime/queries/astro/: README.md  injections.scm
runtime/queries/cpp/: README.md  highlights.scm  indents.scm  injections.scm  textobjects.scm
runtime/queries/javascript/: README.md  highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm  textobjects.scm
runtime/queries/jsx/: README.md  highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm  textobjects.scm
runtime/queries/markdown/: README.md  highlights.scm  injections.scm
runtime/queries/tsx/: README.md  highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm  textobjects.scm
runtime/queries/typescript/: README.md  highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm  textobjects.scm
src/: cli.rs  config.rs  daemon.rs  grammars.rs  handler.rs  highlighting.rs  languages.rs  main.rs  queries.rs  request.rs  response.rs  session.rs
tree-sitter-highlight/: Cargo.toml  README.md
tree-sitter-highlight/src/: lib.rs  util.rs
