[package]
name = "kak-tree-sitter"
version = "0.1.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Server between Kakoune and tree-sitter"
keywords = []
categories = []
homepage = "https://github.com/phaazon/kak-tree-sitter"
repository = "https://github.com/phaazon/kak-tree-sitter"
readme = "README.md"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
