[package]
name = "kak-tree-sitter-config"
version = "0.2.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Server between Kakoune and tree-sitter; configuration layer"
keywords = ["tree-sitter", "kakoune"]
categories = ["text-editors"]
homepage = "https://github.com/phaazon/kak-tree-sitter"
repository = "https://github.com/phaazon/kak-tree-sitter"
readme = "README.md"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
dirs = "5.0.1"
serde = { version = "1.0.185", features = ["derive"] }
thiserror = "1.0.47"
toml = "0.7.6"
