[package]
name = "kak-tree-sitter-config"
version = "0.5.0-dev"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <hadronized@strongly-typed-thoughts.net>"]
description = "Server between Kakoune and tree-sitter; configuration layer"
keywords = ["tree-sitter", "kakoune"]
categories = ["text-editors"]
homepage = "https://git.sr.ht/~hadronized/kak-tree-sitter"
repository = "https://git.sr.ht/~hadronized/kak-tree-sitter"
readme = "README.md"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
dirs = "5.0.1"
log = "0.4.21"
serde = { version = "1.0.199", features = ["derive"] }
thiserror = "1.0.59"
toml = "0.8.12"
