[package]
name = "kak-tree-sitter-config"
version = "1.0.0-dev"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <hadronized@strongly-typed-thoughts.net>"]
description = "Server between Kakoune and tree-sitter; configuration layer"
keywords = ["tree-sitter", "kakoune"]
categories = ["text-editors"]
homepage = "https://git.sr.ht/~hadronized/kak-tree-sitter"
repository = "https://git.sr.ht/~hadronized/kak-tree-sitter"
readme = "README.md"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
dirs = "5.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.60"
toml = "0.8.12"
