[package]
name = "kak-tree-sitter"
version = "0.4.6-dev"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Server between Kakoune and tree-sitter"
keywords = ["tree-sitter", "kakoune"]
categories = ["text-editors"]
homepage = "https://github.com/phaazon/kak-tree-sitter"
repository = "https://github.com/phaazon/kak-tree-sitter"
readme = "../README.md"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
ctrlc = "3.4.1"
daemonize = "0.5.0"
dirs = "5.0.0"
itertools = "0.12.0"
kak-tree-sitter-config = { version = "0.3.0-dev", path = "../kak-tree-sitter-config" }
libc = "0.2.149"
libloading = "0.8.1"
log = "0.4.20"
mio = { version = "0.8.9", features = ["net", "os-ext", "os-poll"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
simple_logger = "4.2.0"
thiserror = "1.0.50"
tree-sitter = "0.20.10"
tree-sitter-highlight = "0.20.1"
