[package]
name = "kak-tree-sitter"
version = "0.5.4-dev"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Server between Kakoune and tree-sitter"
keywords = ["tree-sitter", "kakoune"]
categories = ["text-editors"]
homepage = "https://github.com/hadronized/kak-tree-sitter"
repository = "https://github.com/hadronized/kak-tree-sitter"
readme = "../README.md"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
ctrlc = "3.4.4"
daemonize = "0.5.0"
dirs = "5.0.0"
itertools = "0.12.1"
kak-tree-sitter-config = { version = "0.4.0-dev", path = "../kak-tree-sitter-config" }
libc = "0.2.153"
libloading = "0.8.3"
log = "0.4.21"
mio = { version = "0.8.11", features = ["net", "os-ext", "os-poll"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
simple_logger = "4.3.3"
thiserror = "1.0.57"
tree-sitter = "0.20.10"
tree-sitter-highlight = "0.20.1"
unicode-segmentation = "1.11.0"

[dev-dependencies]
tree-sitter-rust = "0.20.4"
