[package]
name = "kak-tree-sitter"
version = "1.1.2-dev"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <hadronized@strongly-typed-thoughts.net>"]
description = "Server between Kakoune and tree-sitter"
keywords = ["tree-sitter", "kakoune"]
categories = ["text-editors"]
homepage = "https://git.sr.ht/~hadronized/kak-tree-sitter/"
repository = "https://git.sr.ht/~hadronized/kak-tree-sitter/"
readme = "../README.md"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
daemonize = "0.5"
dirs = "5.0"
itertools = "0.12"
#kak-tree-sitter-config = { version = ">=1.0.0, <3.0.0", path = "../kak-tree-sitter-config" }
kak-tree-sitter-config = { version = "2.1.2-dev", path = "../kak-tree-sitter-config" }
libc = "0.2"
libloading = "0.8"
log = "0.4"
mio = { version = "0.8.11", features = ["net", "os-poll", "os-ext"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "5"
thiserror = "1.0"
tree-sitter = "0.20"
tree-sitter-highlight = "0.20"
unicode-segmentation = "1.11"
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
tree-sitter-rust = "0.20"
