[package]
name = "ktsctl"
version = "0.2.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "CLI controler of kak-tree-sitter"
keywords = ["tree-sitter", "kakoune"]
categories = ["text-editors"]
homepage = "https://github.com/phaazon/kak-tree-sitter"
repository = "https://github.com/phaazon/kak-tree-sitter"
readme = "README.md"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
colored = "2.0.4"
dirs = "5.0.1"
kak-tree-sitter-config = { version = "0.2.0", path = "../kak-tree-sitter-config" }
thiserror = "1.0.44"
