[package]
name = "ktsctl"
version = "0.3.3-dev"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "CLI controler of kak-tree-sitter"
keywords = ["tree-sitter", "kakoune"]
categories = ["text-editors"]
homepage = "https://github.com/hadronized/kak-tree-sitter"
repository = "https://github.com/hadronized/kak-tree-sitter"
readme = "README.md"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
#kak-tree-sitter-config = { version = ">=0.3.0, <0.5", path = "../kak-tree-sitter-config" }
kak-tree-sitter-config = { version = "0.4.0-dev", path = "../kak-tree-sitter-config" }
log = "0.4.21"
simple_logger = "4.3.3"
thiserror = "1.0.57"
unicode-segmentation = "1.11.0"
