[package]
name = "ktsctl"
version = "1.1.0-dev"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <hadronized@strongly-typed-thoughts.net>"]
description = "CLI controler of kak-tree-sitter"
keywords = ["tree-sitter", "kakoune"]
categories = ["text-editors"]
homepage = "https://git.sr.ht/~hadronized/kak-tree-sitter"
repository = "https://git.sr.ht/~hadronized/kak-tree-sitter"
readme = "README.md"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
dirs = "5.0"
kak-tree-sitter-config = { version = "2.0.0-dev", path = "../kak-tree-sitter-config" }
log = "0.4"
simple_logger = "5"
thiserror = "1.0"
unicode-segmentation = "1.11"
